tests/NormalTests/paczka1/small_fuzzy/34223026.err
Error in line 2: A963 A888 45,4
Error in line 1: bNBmgJl A888 15,4
Error in line 8: bNBmgJl S643 87,0
Error in line 11: 8cKO A888 36,6
Error in line 12: 8cKO S643 15,1
